Added simple tabs feature and sections page

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,12 +13,14 @@
 @import "components/folder";
 @import "components/popup-prompt";
 @import "components/form-input";
+@import "components/tabs";
 
 @import "layout/header";
 @import "layout/grid";
 
 @import "pages/home";
 @import "pages/books";
+@import "pages/sections";
 
 
 
