--- a/src/styles/components/_button.scss
+++ b/src/styles/components/_button.scss
@@ -84,3 +84,27 @@
 
 
 }
+
+.plus-button{
+  margin-left: 10px;
+  color: $color-primary;
+  transition: all .1s;
+  font-size: 4.5rem !important;
+
+  &--tab{
+    font-size: 9rem !important;
+    margin-left: 0;
+    width: 100%;
+    height: 100%;
+  }
+
+  &:hover{
+      color: darken($color-primary,5%);
+  }
+
+  &:active{
+      transform: translateY(.1rem);
+  }
+
+}
+
