--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -7,8 +7,23 @@
   box-sizing: inherit;
 }
 
-html{
-  font-size: 10px;
+@media screen and (max-width: 800px){
+  html{
+    font-size: 8px;
+  }
+}
+
+@media screen and (max-width: 1500px) and (min-width: 800px){
+  html{
+    font-size: 10px;
+  }
+}
+
+
+@media screen and (min-width: 1500px){
+  html{
+    font-size: 13px;
+  }
 }
 
 body{
