--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -14,6 +14,7 @@
 @import "components/popup-prompt";
 @import "components/form-input";
 @import "components/tabs";
+@import "components/vertical-list";
 
 @import "layout/header";
 @import "layout/grid";
