--- a/src/styles/pages/_sections.scss
+++ b/src/styles/pages/_sections.scss
@@ -1,7 +1,30 @@
-.section-list{
-    width: 100rem;
-    height: 85vh;
-    background-color: $color-grey-light;
-    border-top: 10px solid $color-primary-dark;
-    box-shadow: 0 1.5rem 4rem rgba($color-black, .5);
+.section-box {
+  width: 100rem;
+  height: 85vh;
+  display: flex;
+  background-color: $color-grey-light;
+  border-top: 10px solid $color-primary-dark;
+  box-shadow: 0 1.5rem 4rem rgba($color-black, 0.5);
+}
+
+.section-recipies {
+  width: 15rem;
+  height: 100%;
+  background-color: $color-grey-light;
+  border-right: 3px solid $color-primary-dark;
+}
+
+.sections {
+  display: inline-block;
+}
+
+.recipie-page {
+  padding: 2rem;
+  width: 100%;
+}
+
+.description-box {
+  width: 100%;
+  height: 20rem;
+  resize: none;
 }
