--- a/src/styles/layout/grid.scss
+++ b/src/styles/layout/grid.scss
@@ -1,7 +1,7 @@
 .grid{
     display: flex;
-    // flex-wrap: wrap;
-    justify-content: space-between;
+    flex-wrap: wrap;
+    justify-content: center;
 }
 
 .box-1-of-2{
@@ -10,6 +10,7 @@
 
 .box-1-of-3{
     width: 26rem;
+    margin: 20px
 }
 
 .thin-card-grid{
