--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -3,9 +3,9 @@
 @import "abstracts/variables";
 
 @import "base/animations";
-@import "base/base"; 
-@import "base/typography"; 
-@import "base/utilities"; 
+@import "base/base";
+@import "base/typography";
+@import "base/utilities";
 
 @import "components/button";
 @import "components/feature-box";
@@ -15,6 +15,7 @@
 @import "components/form-input";
 @import "components/tabs";
 @import "components/vertical-list";
+@import "components/icon-button";
 
 @import "layout/header";
 @import "layout/grid";
@@ -23,13 +24,7 @@
 @import "pages/books";
 @import "pages/sections";
 
-
-
-
-.btn__box{
+.btn__box {
   display: flex;
   justify-content: center;
 }
-
-
-
